Add support for testing plain Command classes (#3673)
    * Add support for testing plain Command classes

    `DropwizardTestSupport` didn't support running plain `Command` or `ConfiguredCommand<C>` classes which have been with the `commandInstantiator` parameter in the `DropwizardAppExtension` extension (JUnit 5) or `DropwizardAppRule` rule (JUnit 4).

    * Try making BadLogTest less flaky

    Disable test on Windows:
    ```
    java.io.IOException: Failed to delete temp directory C:\Users\appveyor\AppData\Local\Temp\1\junit7886399651463695950. The following paths could not be deleted (see suppressed exceptions for details): , example.log
    ```